Fix double scrollbar issue on builtin pages

--- a/app/stylesheets/builtin-pages.less
+++ b/app/stylesheets/builtin-pages.less
@@ -38,6 +38,7 @@
 .builtin-wrapper {
   width: 100%;
   max-width: 1400px;
+  overflow-y: hidden;
   margin: 0 auto;
   background: #fff;
 
